--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -105,8 +105,10 @@
  </g>
 </svg>
 -->
-<!-- http://editor.method.ac/ -->
 
+
+<!-- http://editor.method.ac/ -->
+<!--
 <svg width="1500" height="600" xmlns="http://www.w3.org/2000/svg">
  <g>
   <path id="1_line" fill="none" stroke="#cccccc" d="m64.02642,243.90154l165,0" stroke-width="2"/>
@@ -136,6 +138,7 @@
   <path id="13_line" stroke="#cccccc"  fill="none" d="m498.377213,381.26414l242.000022,0" stroke-width="2"/>
   <path id="14_line" stroke="#cccccc"  fill="none" d="m765.026347,381.43959l239.999991,0" stroke-width="2"/>
   <path id="15_line" stroke="#cccccc"  fill="none" d="m634.37721,252.26414l242.00002,0" stroke-width="2"/>
+
   <text id="1_key" xml:space="preserve" text-anchor="start" font-size="24" y="235.770165" x="67.700046" fill-opacity="null" stroke-opacity="null" stroke-width="0" stroke="#cccccc" fill="#000000">NK</text>
   <text id="2_key" xml:space="preserve" text-anchor="start" font-size="24" y="341.079719" x="68" fill-opacity="null" stroke-opacity="null" stroke-width="0" stroke="#cccccc" fill="#000000">NK</text>
   <text id="3_key" xml:space="preserve" text-anchor="start" font-size="24" y="410.10615" x="67.700046" fill-opacity="null" stroke-opacity="null" stroke-width="0" stroke="#cccccc" fill="#000000">NK</text>
@@ -150,16 +153,28 @@
   <text id="10_keydet" fill="#000000" stroke="#cccccc" stroke-width="0" stroke-opacity="null" fill-opacity="null" x="285.5" y="494.5"  font-size="24" text-anchor="start" xml:space="preserve">DE_NK</text>
   <text id="11_key" fill="#000000" stroke="#cccccc" stroke-width="0" stroke-opacity="null" fill-opacity="null" x="1064.5" y="289.5"  font-size="24" text-anchor="start" xml:space="preserve">NK</text>
   <text id="11_keydet" fill="#000000" stroke="#cccccc" stroke-width="0" stroke-opacity="null" fill-opacity="null" x="1064.5" y="322.5" font-size="24" text-anchor="start" xml:space="preserve">DE_NK</text>
-  <text fill="#000000" stroke="#cccccc" stroke-width="0" stroke-opacity="null" fill-opacity="null" x="1062.5" y="460.5" id="svgKey_7" font-size="24" text-anchor="start" xml:space="preserve">NK</text>
-  <text fill="#000000" stroke="#cccccc" stroke-width="0" stroke-opacity="null" fill-opacity="null" x="1062.5" y="492.5" id="svgKey_8" font-size="24" text-anchor="start" xml:space="preserve">DE_NK</text>
-  <text stroke="#cccccc" fill="#000000" stroke-width="0" stroke-opacity="null" fill-opacity="null" x="502.5" y="374.5" id="svgKey_9" font-size="24" text-anchor="start" xml:space="preserve">NK</text>
-  <text fill="#000000" stroke="#cccccc" stroke-width="0" stroke-opacity="null" fill-opacity="null" x="503.5" y="405.5" id="svgKey_10" font-size="24" text-anchor="start" xml:space="preserve">DE_NK</text>
-  <text stroke="#cccccc" fill="#000000" stroke-width="0" stroke-opacity="null" fill-opacity="null" x="769.5" y="374.5" id="svgKey_11" font-size="24" text-anchor="start" xml:space="preserve">NK</text>
-  <text fill="#000000" stroke="#cccccc" stroke-width="0" stroke-opacity="null" fill-opacity="null" x="768.5" y="405.5" id="svgKey_12" font-size="24" text-anchor="start" xml:space="preserve">DE_NK</text>
-  <text fill="#000000" stroke="#cccccc" stroke-width="0" stroke-opacity="null" fill-opacity="null" x="733.140625" y="245.5" id="svg_17" font-size="24" text-anchor="start" xml:space="preserve">NK</text>
-  <text fill="#000000" stroke="#cccccc" stroke-width="0" stroke-opacity="null" fill-opacity="null" x="711.648438" y="278.5" id="svg_18" font-size="24" text-anchor="start" xml:space="preserve">DE_NK</text>
-  <image stroke="null" xlink:href="./../../assets/img/copa.png" id="svg_19" height="185" width="169" y="10" x="666"/>
+  <text id="12_key" fill="#000000" stroke="#cccccc" stroke-width="0" stroke-opacity="null" fill-opacity="null" x="1062.5" y="460.5"  font-size="24" text-anchor="start" xml:space="preserve">NK</text>
+  <text id="12_keydet" fill="#000000" stroke="#cccccc" stroke-width="0" stroke-opacity="null" fill-opacity="null" x="1062.5" y="492.5"  font-size="24" text-anchor="start" xml:space="preserve">DE_NK</text>
+  <text id="13_key"  stroke="#cccccc" fill="#000000" stroke-width="0" stroke-opacity="null" fill-opacity="null" x="502.5" y="374.5" font-size="24" text-anchor="start" xml:space="preserve">NK</text>
+  <text id="13_keyd" fill="#000000" stroke="#cccccc" stroke-width="0" stroke-opacity="null" fill-opacity="null" x="503.5" y="405.5" font-size="24" text-anchor="start" xml:space="preserve">DE_NK</text>
+  <text id="14_key" stroke="#cccccc" fill="#000000" stroke-width="0" stroke-opacity="null" fill-opacity="null" x="769.5" y="374.5"  font-size="24" text-anchor="start" xml:space="preserve">NK</text>
+  <text id="14_keyd" fill="#000000" stroke="#cccccc" stroke-width="0" stroke-opacity="null" fill-opacity="null" x="768.5" y="405.5"  font-size="24" text-anchor="start" xml:space="preserve">DE_NK</text>
+  <text id="15_key" fill="#000000" stroke="#cccccc" stroke-width="0" stroke-opacity="null" fill-opacity="null" x="733.140625" y="245.5" font-size="24" text-anchor="start" xml:space="preserve">NK</text>
+  <text id="15_keyd" fill="#000000" stroke="#cccccc" stroke-width="0" stroke-opacity="null" fill-opacity="null" x="711.648438" y="278.5" font-size="24" text-anchor="start" xml:space="preserve">DE_NK</text>
+
+  <image id="imgWin" stroke="null" xlink:href="./../../assets/img/copa.png" height="185" width="169" y="10" x="666"/>
+
  </g>
 </svg>
+-->
 
 </div>
+
+
+<svg width="1500" height="600" xmlns="http://www.w3.org/2000/svg">
+ <g *ngFor="let to of torneo">
+      <path [id]="to._idl" fill="none" stroke="#cccccc" [attr.d]="to._dl" stroke-width="2"/>
+      <path [id]="to._idd" fill="none" [attr.d]="to._dd" stroke-width="2" stroke="#cccccc"/>
+      <text [id]="to._idt" xml:space="preserve" text-anchor="start" font-size="24" [attr.y]="to._yt" [attr.x]="to._xt" fill-opacity="null" stroke-opacity="null" stroke-width="0" stroke="#cccccc" fill="#000000"> {{ to._name }} </text>
+</g>
+</svg>
